# PLATO

./: .gitignore  AlleleInfo.cc  AlleleInfo.h  CHANGELOG  ChiSquare.h  ChiSquareAllelic.cpp  ChiSquareAllelic.h  ChiSquareArmitage.cpp  ChiSquareArmitage.h  Chrom.cc  Chrom.h  Controller.cpp  Controller.h  DataSetObject.cpp  DataSetObject.h  Doxyfile  ExampleModule.cc  ExampleModule.h  Finalize.cc  Finalize.h  FisherExact.cpp  FisherExact.h  Globals.h  Heterozygosity.cc  Heterozygosity.h  InputManager.cpp  InputManager.h  LinearModel.cc  LinearModel.h  MPIProcess.cpp  MPIProcess.h  MPIProcessFactory.cpp  MPIProcessFactory.h  Makefile  Makefile.am  Makefile.in  Percent.cc  Percent.h  PercentByFamily.cc  PercentByFamily.h  (+124 more)
doc/: MPI_API.odt  PLATO-design.xmi  manual.doc  manual.odt
input/: GenotypeReader.cpp  GenotypeReader.h  GenotypeReaderFactory.cpp  GenotypeReaderFactory.h  Reader.h
lib/: sqlite3.lib
method_lib/: AlleleFrequency.cc  AlleleFrequency.h  AnnealParameters.h  BEAGLEOutput.cc  BEAGLEOutput.h  BINOutput.cc  BINOutput.h  BoxCoxTransform.cpp  CMH.cpp  CMH.h  CaConChisq.cc  CaConChisq.h  ChiSquare.cpp  ChiSquareAllelic.cpp  ChiSquareAllelic.h  ChiSquareArmitage.cpp  ChiSquareArmitage.h  ClusterMissing.cc  ClusterMissing.h  ComboGenerator.cpp  ComboGenerator.h  Concordance.cc  Concordance.h  CondLogRegression.cpp  ContingencyTable.cpp  ContingencyTable.h  CovTrait.cpp  CovTrait.h  Covariate.cpp  Covariate.h  DataSet.cpp  DataSet.h  Deletions.cc  Deletions.h  EigenstratOutput.cc  EigenstratOutput.h  Epistasis.cc  Epistasis.h  FBATOutput.cc  FBATOutput.h  (+119 more)
method_lib/analysis/: Adjustment.cpp  Adjustment.h  Correction.cpp  Correction.h  Encoding.cpp  Encoding.h  Regression.cpp  Regression.h
method_lib/data/: BiallelicSample.cpp  BiallelicSample.h  DataSet.cpp  DataSet.h  Family.h  Marker.cpp  Marker.h  PhasedBiallelicSample.cpp  PhasedBiallelicSample.h  PhasedPolyallelicSample.cpp  PhasedPolyallelicSample.h  PolyallelicSample.cpp  PolyallelicSample.h  Sample.cpp  Sample.h
method_lib/filters/: AlleleFrequencyFilter.cpp  AlleleFrequencyFilter.h  Analysis.cpp  Analysis.h  AnalysisSet.cpp  AnalysisSet.h  ArmitageFilter.cpp  ArmitageFilter.h  BinSnpFileReader.cpp  BinSnpFileReader.h  BioBinaryReader.cpp  BioBinaryReader.h  BioFilter.cpp  BioFilter.h  BioFilterCombinations.cpp  BioFilterCombinations.h  BioRecordResults.cpp  BioRecordResults.h  ChiSquareFilter.cpp  ChiSquareFilter.h  ConditionalLRFilter.cpp  ConditionalLRFilter.h  ConfigFileReader.cpp  ConfigFileReader.h  ConfigReader.h  ContingencyFilter.cpp  ContingencyFilter.h  DB.cpp  DB.h  DataDefinitions.h  DataExcept.cpp  DataExcept.h  FileResults.cpp  FileResults.h  Filter.cpp  Filter.h  FilterDefinitions.h  FilterExcept.cpp  FilterExcept.h  FilterFactory.cpp  (+41 more)
method_lib/mdrpdt/: MDRPDTRepository.cpp  MDRPDTRepository.h  evaluationmethod.cpp  evaluationmethod.h  exception.h  familyrepository.cpp  familyrepository.h  foldproduction.cpp  foldstatistic.cpp  foldstatistic.h  genotypecounter.h  genotyperepository.cpp  genotyperepository.h  individual.cpp  individual.h  lineparser.cpp  lineparser.h  matchedoddsratio.cpp  matchedoddsratio.h  orderreport.cpp  orderreport.h  pdtmodel.cpp  pdtmodel.h  pedigree.cpp  pedigree.h  ptestdistribution.cpp  ptestdistribution.h  random.cpp  random.h  randomc.h  rbtree.h  sibship.cpp  sibship.h  strings.cpp  strings.h  tfinalreport.cpp  tfinalreport.h  tstatistic.cpp  tstatistic.h  types.h  (+1 more)
method_lib/old/: AlleleFrequency.h.bak  AnnealParameters.cpp  AnnealParameters.h  BEAGLEOutput.cc  BINOutput.cc  BoxCoxTransform.cpp  BoxCoxTransform.h  CMH.cpp  CaConChisq.cc  CaConChisq.h  ChiSquare.cpp  ClusterMissing.cc  ClusterMissing.h  CondLogRegression.h  ContingencyTable.cpp  ContingencyTable.h  Covariate.h  Deletions.cc  Deletions.h  EigenstratOutput.cc  EigenstratOutput.h  FBATOutput.h  Family.cc  FilterProcess.cpp  FilterProcess.h  FisherExact.cpp  FisherExact.h  FlatIndex.h  Fst.h  GRROutput.cc  GRROutput.h  GenderCheck.cc  GenderCheck.h  Globals.h  Helpers.cc  Homozygous.h  IBS.h  ImputeOutput.cc  ImputeOutput.h  InputFilter.cpp  (+30 more)
method_lib/old/to_delete/: ChiSquare.h  CovTrait.cpp  CovTrait.h  Covariate.cpp  DataSet.cpp  Epistasis.cc  Epistasis.h  Interactions.h  LogicRegression.cpp  PEDOutput.cc
method_lib/tests/: Makefile  data_set_test.cc  helper_test.cc  marker_test.cc
method_lib/tests/sample_data/: input_ped.txt  input_ped_map.txt  testped.covs  testped.map  testped.ped
method_lib/tests/src/.deps/: gtest-death-test.Plo  gtest-filepath.Plo  gtest-port.Plo  gtest-test-part.Plo  gtest-typed-test.Plo  gtest.Plo  gtest_main.Plo  test_gtest_no_rtti_test-gtest-all.Po  test_gtest_no_rtti_test-gtest_main.Po  test_gtest_throw_on_failure_ex_test-gtest-all.Po  test_gtest_throw_on_failure_test_-gtest-all.Po  test_gtest_tuple_test-gtest-all.Po  test_gtest_tuple_test-gtest_main.Po  test_gtest_use_own_tuple_test-gtest-all.Po
method_lib/util/: BiallelicSample.cpp  BiallelicSample.h  CommandLineParser.h  CommandLineParser.hpp  Container.h  DataLoader.cpp  DataLoader.h  DataSet.cpp  DataSet.h  Family.h  FileLoader.cpp  FileLoader.h  GSLUtils.cpp  GSLUtils.h  ICompressedFile.cpp  ICompressedFile.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  MPIUtils.cpp  MPIUtils.h  Marker.cpp  Marker.h  Missing.cpp  Missing.h  MultiHeap.h  OutputPLINK.cpp  OutputPLINK.h  PhasedBiallelicSample.cpp  PhasedBiallelicSample.h  PhasedPolyallelicSample.cpp  PhasedPolyallelicSample.h  PolyallelicSample.cpp  PolyallelicSample.h  Sample.cpp  Sample.h  ThreadPool.cpp  ThreadPool.h
plato-viewer/: BatchDialog.cpp  BatchDialog.h  Controller.cpp  Controller.h  CovTraitModel.cpp  CovTraitModel.h  DataSetObject.cpp  DataSetObject.h  FileTypeModel.cpp  FileTypeModel.h  LocusFilterModel.cpp  LocusFilterModel.h  Makefile  MarkerEfficiencyProcess.cpp  MarkerEfficiencyProcess.h  OptionData.cpp  OptionData.h  OptionsList.cpp  OptionsList.h  OtherModel.cpp  OtherModel.h  PlatoGui.cpp  PlatoGui.h  PlatoProject.cpp  PlatoProject.h  PlotAssistant.cpp  PlotAssistant.h  PlotGui.cpp  PlotGui.h  Process.cpp  Process.h  (+20 more)
(+182 files in other folders)
