noinst_LTLIBRARIES=libmethods.la

libmethods_la_SOURCES=AlleleFrequency.cc \
AlleleFrequency.h \
BEAGLEOutput.cc \
BEAGLEOutput.h \
BINOutput.cc \
BINOutput.h \
BoxCoxTransform.cpp \
BoxCoxTransform.h \
CaConChisq.cc \
CaConChisq.h \
cdflib.h \
ChiSquareAllelic.cpp \
ChiSquareAllelic.h \
ChiSquareArmitage.cpp \
ChiSquareArmitage.h \
ChiSquare.cpp \
ChiSquare.h \
ClusterMissing.cc \
CMH.cpp \
CMH.h \
ComboGenerator.cpp \
ComboGenerator.h \
Concordance.cc \
Concordance.h \
conditional_lr.cpp \
conditional_lr.h \
CondLogRegression.cpp \
CondLogRegression.h \
ContingencyTable.cpp \
ContingencyTable.h \
Covariate.cpp \
Covariate.h \
CovTrait.cpp \
CovTrait.h \
DataSet.cpp \
DataSet.h \
dcdflib.cpp \
Deletions.cc \
Deletions.h \
EigenstratOutput.cc \
EigenstratOutput.h \
Epistasis.cc \
Epistasis.h \
Family.cc \
Family.h \
FBATOutput.cc \
FBATOutput.h \
FilterProcess.cpp \
FilterProcess.h \
filters/AlleleFrequencyFilter.cpp \
filters/AlleleFrequencyFilter.h \
filters/Analysis.cpp \
filters/Analysis.h \
filters/AnalysisSet.cpp \
filters/AnalysisSet.h \
filters/ArmitageFilter.cpp \
filters/ArmitageFilter.h \
filters/BinSnpFileReader.cpp \
filters/BinSnpFileReader.h \
filters/BioBinaryReader.cpp \
filters/BioBinaryReader.h \
filters/BioFilter.cpp \
filters/BioFilter.h \
filters/ChiSquareFilter.cpp \
filters/ChiSquareFilter.h \
filters/ConditionalLRFilter.cpp \
filters/ConditionalLRFilter.h \
filters/ConfigFileReader.cpp \
filters/ConfigFileReader.h \
filters/ConfigReader.h \
filters/ContingencyFilter.cpp \
filters/ContingencyFilter.h \
filters/DataDefinitions.h \
filters/DataExcept.cpp \
filters/DataExcept.h \
filters/FileResults.cpp \
filters/FileResults.h \
filters/Filter.cpp \
filters/FilterExcept.cpp \
filters/FilterExcept.h \
filters/FilterFactory.cpp \
filters/FilterFactory.h \
filters/Filter.h \
filters/Filters.h \
filters/LikelihoodRatioFilter.cpp \
filters/LikelihoodRatioFilter.h \
filters/LogInfo.cpp \
filters/LogInfo.h \
filters/LogRegFilter.cpp \
filters/LogRegFilter.h \
filters/MarkerGenoFilter.cpp \
filters/MarkerGenoFilter.h \
filters/MarsFilter.cpp \
filters/MarsFilter.h \
filters/MaxScoreFilter.cpp \
filters/MaxScoreFilter.h \
filters/MDRFilter.cpp \
filters/MDRFilter.h \
filters/MDRPDTFilter.cpp \
filters/MDRPDTFilter.h \
filters/NMIFilter.cpp \
filters/NMIFilter.h \
filters/OddsRatioFilter.cpp \
filters/OddsRatioFilter.h \
filters/OutputWriterFactory.cpp \
filters/OutputWriterFactory.h \
filters/PermScoreFilter.cpp \
filters/PermScoreFilter.h \
filters/Permutation.cpp \
filters/Permutation.h \
filters/PlatoDefinitions.h \
filters/PlatoExcept.h \
filters/ResultSet.h \
filters/ResultsManager.cpp \
filters/ResultsManager.h \
filters/SnpFileReader.h \
filters/Stringmanip.cpp \
filters/Stringmanip.h \
filters/TextSnpFileReader.cpp \
filters/TextSnpFileReader.h \
filters/UncertaintyCoeffFilter.cpp \
filters/UncertaintyCoeffFilter.h \
FisherExact.cpp \
FisherExact.h \
FlatIndex.cpp \
FlatIndex.h \
Fst.cc \
Fst.h \
GenderCheck.cc \
GenderCheck.h \
General.cc \
General.h \
Globals.h \
GRROutput.cc \
GRROutput.h \
Helpers.cc \
Helpers.h \
Homozygous.cc \
Homozygous.h \
HWEquilibrium.cc \
HWEquilibrium.h \
IBS.cc \
IBS.h \
ImputeOutput.cc \
ImputeOutput.h \
InputFilter.cpp \
InputFilter.h \
ipmpar.cpp \
Kinship.cc \
Kinship.h \
LAPISOutput.cc \
LAPISOutput.h \
LD.cc \
LD.h \
LikelihoodRatio.cpp \
LikelihoodRatio.h \
LinearRegression.cpp \
LinearRegression.h \
LogisticRegression.cpp \
LogisticRegression.h \
LogTransform.cpp \
LogTransform.h \
Marker.cc \
MarkerGenoEff.cc \
MarkerGenoEff.h \
Marker.h \
max.h \
MDR.cpp \
MDR.h \
MDROutput.cc \
MDROutput.h \
MDRPDT.cpp \
MDRPDT.h \
mdrpdt/evaluationmethod.cpp \
mdrpdt/evaluationmethod.h \
mdrpdt/familyrepository.cpp \
mdrpdt/familyrepository.h \
mdrpdt/foldproduction.cpp \
mdrpdt/foldproduction.h \
mdrpdt/foldstatistic.cpp \
mdrpdt/foldstatistic.h \
mdrpdt/genotypecounter.h \
mdrpdt/genotyperepository.cpp \
mdrpdt/genotyperepository.h \
mdrpdt/individual.cpp \
mdrpdt/individual.h \
mdrpdt/lineparser.cpp \
mdrpdt/lineparser.h \
mdrpdt/matchedoddsratio.cpp \
mdrpdt/matchedoddsratio.h \
mdrpdt/MDRPDTRepository.cpp \
mdrpdt/MDRPDTRepository.h \
mdrpdt/mersenne.cpp \
mdrpdt/orderreport.cpp \
mdrpdt/orderreport.h \
mdrpdt/pdtmodel.cpp \
mdrpdt/pdtmodel.h \
mdrpdt/pedigree.cpp \
mdrpdt/pedigree.h \
mdrpdt/ptestdistribution.cpp \
mdrpdt/ptestdistribution.h \
mdrpdt/randomc.h \
mdrpdt/random.cpp \
mdrpdt/random.h \
mdrpdt/rbtree.h \
mdrpdt/sibship.cpp \
mdrpdt/sibship.h \
mdrpdt/strings.cpp \
mdrpdt/strings.h \
mdrpdt/tfinalreport.cpp \
mdrpdt/tfinalreport.h \
mdrpdt/tstatistic.cpp \
mdrpdt/tstatistic.h \
mdrpdt/types.h \
mdrpdt/utility.h \
MendelianErrors.cc \
MendelianErrors.h \
MitoCheck.cc \
MitoCheck.h \
Model.cpp \
Model.h \
MultComparison.cpp \
MultComparison.h \
NMI.cpp \
NMI.h \
OddsRatio.cpp \
OddsRatio.h \
Options.cc \
Options.h \
PDT2Output.cc \
PDT2Output.h \
PEDOutput.cc \
PEDOutput.h \
PHASEOutput.cc \
PHASEOutput.h \
PowerMarkerOutput.cc \
PowerMarkerOutput.h \
QTDTOutput.cc \
QTDTOutput.h \
RunTDT.cc \
RunTDT.h \
Sample.cc \
SampleGenoEff.cc \
SampleGenoEff.h \
Sample.h \
SquareRootTransform.cpp \
SquareRootTransform.h \
StepOptions.cc \
StepOptions.h \
STRUCTOutput.cc \
STRUCTOutput.h \
SuperlinkOutput.cc \
SuperlinkOutput.h \
TPEDOutput.cpp \
TPEDOutput.h \
Trait.cpp \
Trait.h \
UncertaintyCoefficient.cpp \
UncertaintyCoefficient.h \
MethodException.h \
ClusterMissing.h \
filters/FilterDefinitions.h \
filters/OutputWriter.h \
earth.h \
mdrpdt/exception.h 
